# chat_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
bot_service/: run_bot.sh
bot_service/src/app/: bot.py  loader.py
bot_service/src/config/: config.py  config.yaml
bot_service/src/handlers/: commands.py  dialog.py
bot_service/src/routers/: callbacks.py  commands.py  dialog.py
bot_service/src/utils/: markup.py
data/: cbr_document_links.txt  document_links.txt  questions.csv
ml_service/: run_ml.bash  run_ml.sh  run_ml_service.bash
ml_service/src/app/: app.py  loader.py
ml_service/src/config/: config.py  config.yaml
ml_service/src/database/: chroma.py
ml_service/src/model/: embeddings_model.py  models.py  prediction_model.py  splitter_model.py
ml_service/src/models/: embeddings_model.py  models.py  prediction_model.py  splitter_model.py
ml_service/src/routers/: main.py  schemas.py
notebooks/: cb_baseline_vectorSearch.ipynb  cbr-baseline.ipynb  create-chunks.ipynb  parser.ipynb
src/app/: bot.py
src/utils/: parser.py
