[tool.poetry]
name = "chat-bot-br"
version = "0.1.0"
description = ""
authors = ["Sokolov Fedor <sokol_f4@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
aiogram = "^3.4.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
chromadb = "^0.4.24"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
